ab-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ab-fe
  name: ab-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ab-fe
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ab-fe
    spec:
      containers:
      - image: gillvian/collab-anika:ab-fe2
        name: ab-fe
        resources: {}
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: ab-fe
spec:
  type: LoadBalancer
  selector:
    app: ab-fe
  ports:
  - port: 80
    targetPort: 80
