ab-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ab-server
  name: ab-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ab-server
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ab-server
    spec:
      containers:
        - name: ab-server
          image: gillvian/collab-anika:ab-server
          ports:
          - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name:  ab-server
spec:
  type: ClusterIP
  selector:
    app: ab-server
  ports:
    - port: 8081
      targetPort: 8081
